<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amrez.americanfootball.MainActivity"
    android:padding="7dp"
    >

    <!-- Player 1-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/player1"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="@android:integer/config_shortAnimTime"
            android:id="@+id/Player1ScoreLabl"
            android:text="@string/Player1ScoreLabl"
            android:textSize="30sp"
            android:fontFamily="casual"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="#69bbc64c"
            android:layout_marginTop="5dp"
            android:id="@+id/Player1Score"
            android:text="@string/Player1Score"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1IncreaseBy6"
            android:text="@string/IncreaseBy6"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="player1IncreaseBy6"
            android:background="#bed9d197"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1IncreaseBy3"
            android:text="@string/IncreaseBy3"
            android:layout_gravity="center"
            android:onClick="player1IncreaseBy3"
            android:background="#bed9d197"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1IncreaseBy2"
            android:text="@string/IncreaseBy2"
            android:layout_gravity="center"
            android:onClick="player1IncreaseBy2"
            android:background="#bed9d197"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1IncreaseBy1"
            android:text="@string/IncreaseBy1"
            android:layout_gravity="center"
            android:onClick="player1IncreaseBy1"
            android:background="#bed9d197"
            />
    </LinearLayout>

    <!--Line-->
    <View android:layout_width="1dp"
        android:layout_height="460dp"
        android:background="#f70606"
        android:id="@+id/Line"
        android:layout_toEndOf="@+id/player1"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/player1" />

    <!-- Player 2-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/Line"
        android:layout_toEndOf="@id/Line"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Player2ScoreLabl"
            android:text="@string/Player2ScoreLabl"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:textSize="30sp"
            android:maxLength="@android:integer/config_shortAnimTime"
            />
        <TextView
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="#69bbc64c"
            android:layout_marginTop="5dp"
            android:id="@+id/Player2Score"
            android:text="@string/Player2Score"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2IncreaseBy6"
            android:text="@string/IncreaseBy6"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="player2IncreaseBy6"
            android:background="#bed9d197"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2IncreaseBy3"
            android:text="@string/IncreaseBy3"
            android:layout_gravity="center"
            android:onClick="player2IncreaseBy3"
            android:background="#bed9d197"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2IncreaseBy2"
            android:text="@string/IncreaseBy2"
            android:layout_gravity="center"
            android:onClick="player2IncreaseBy2"
            android:background="#bed9d197"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2IncreaseBy1"
            android:text="@string/IncreaseBy1"
            android:layout_gravity="center"
            android:onClick="player2IncreaseBy1"
            android:background="#bed9d197"
            />
    </LinearLayout>

    <!-- Reset -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Reset"
        android:text="@string/Reset"
       android:layout_centerInParent="true"
        android:layout_below="@id/Line"
        android:onClick="Reset"
        android:background="#bed9d197"/>
</RelativeLayout>
</ScrollView>